site/module 2 solution/style.css
* {
    font-family: "Oxygen";
  }
  
  .menu-title {
    font-size: 30px;
    text-align: center;
  }
  
  .main-content-block {
    width: 100%;
    height: auto;
  }
  
  .Boxes {
    display: flex;
     justify-content: space-evenly; 

  }

  .box{
    margin-right: 40px;
    margin-left: 40px;
  }
  
  .box {
    display: flex;
    flex-direction: column;
    /* width: 28%; */
    overflow: hidden;
    border: solid 1px black;
    background-color: cadetblue;
  }
  
  .main-content-block #section-1-heading {
    background-color: pink;
  }
  
  .heading {
    font-weight: bolder;
    align-self: flex-end;
    margin-right: 0px;
    border: 1px solid black;
    text-align: center;
    padding-bottom: 12px;
    width: 24%;
    height: 35px;
    background-color: pink;
  }
  
  .main-content-block #section-2-heading {
    background-color: red;
  }
  .main-content-block #section-3-heading {
    background-color: lightgreen;
  }
  
  
  /*mobile view*/
  @media only screen and (max-width: 767px){
    .menu-title{
      font-size: 3vw;
    }
    .Boxes {
      flex-wrap: wrap;
    }
    .box, .box-3{
      margin-bottom: 25px;
      width: 90%;
    }
    .main-content-block .section-content{
      padding-left: 6px;
      padding-right: 6px;
    }
  }

  
  /*desktop view*/
  @media only screen and (min-width: 992px){
    .Boxes{
      flex-wrap: nowrap;
    }
  }


  /*tabletview*/
  @media only screen and (min-width: 768px) and (max-width: 991px){
    .menu-title{
      font-size: 2.5vw;
    }
    .Boxes {
      flex-wrap: wrap;
    }
    #section-1, #section-2{
      display: inline-block;
      width: 38%;
    }
    #section-1 p, #section-2 p, #section-3 p{
      padding: 2px;
    }
    .box-3{
      margin-top: 30px;
      width: 90%;
    }
  }

  .box-3 {
    margin-right: 40px;
    margin-left: 40px;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    border: solid 1px black;
    background-color: cadetblue;
  }
  
  footer{
    background-color: blue;
    height: 40px;
    width: 100%;
    margin-top: 359px;
  }

